# ChangeLog for games-action/d1x-rebirth
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/d1x-rebirth/ChangeLog,v 1.16 2015/04/19 09:47:40 pacho Exp $

  19 Apr 2015; Pacho Ramos <pacho@gentoo.org> d1x-rebirth-0.58.1.ebuild:
  x86 stable wrt bug #539068

  05 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
  -d1x-rebirth-0.57.3.ebuild, -files/d1x-rebirth-0.57.3-flags.patch:
  old

*d1x-rebirth-0.58.1 (27 Jan 2015)

  27 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org>
  +d1x-rebirth-0.58.1.ebuild, +files/d1x-rebirth-0.58.1-flags.patch:
  version bump

  28 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org> -d1x-rebirth-0.56.ebuild,
  -files/d1x-rebirth-0.56-underlink.patch:
  old

  15 May 2014; Ulrich Müller <ulm@gentoo.org> d1x-rebirth-0.56.ebuild,
  d1x-rebirth-0.57.3.ebuild:
  Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
  "sound", bug 357661.

  04 Apr 2014; Ulrich Müller <ulm@gentoo.org> d1x-rebirth-0.50.ebuild,
  d1x-rebirth-0.56.ebuild:
  Fix LICENSE in previous ebuilds too.

*d1x-rebirth-0.57.3 (06 Feb 2013)

  06 Feb 2013; Julian Ospald <hasufell@gentoo.org> +d1x-rebirth-0.57.3.ebuild,
  +files/d1x-rebirth-0.57.3-flags.patch:
  version bump wrt #369419

  31 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -d1x-rebirth-0.55.1.ebuild:
  old

  18 Jan 2012; Mike Frysinger <vapier@gentoo.org> d1x-rebirth-0.55.1.ebuild,
  d1x-rebirth-0.56.ebuild:
  Move to new CDROM_OPTIONAL variable.

  16 Jan 2012; Ulrich Müller <ulm@gentoo.org> d1x-rebirth-0.55.1.ebuild,
  d1x-rebirth-0.56.ebuild:
  Migrate to cdrom.eclass, bug 398809.

  20 Jun 2011; Tupone Alfredo <tupone@gentoo.org> d1x-rebirth-0.56.ebuild,
  +files/d1x-rebirth-0.56-underlink.patch:
  Fix underlink. Bug #369483 by Diego Elio Pettenò

*d1x-rebirth-0.56 (14 Oct 2010)

  14 Oct 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +d1x-rebirth-0.56.ebuild:
  version bump
